Update DB setup

--- a/src/IdentityProvider/appsettings.Development.json
+++ b/src/IdentityProvider/appsettings.Development.json
@@ -4,7 +4,7 @@
     "SenderEmailAddress": "__SenderEmailAddress__"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=duende-multi-tenant-idp;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=duende-sms-idp;Trusted_Connection=True;"
   },
   "ProfileApiConfigurations": {
     "Authority": "https://localhost:5021",
