Update SMS sender

--- a/src/IdentityProvider/appsettings.json
+++ b/src/IdentityProvider/appsettings.json
@@ -20,7 +20,8 @@
     "Url": "https://rest.ecall.ch/api/",
     "Username": "TODO",
     "Password": "TODO", // in user secrets
-    "Channel": "sms"
+    "Channel": "sms",
+    "Sender": "damienenpoc"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.ApplicationInsights" ],
