--- a/src/IdentityProvider/appsettings.json
+++ b/src/IdentityProvider/appsettings.json
@@ -21,7 +21,7 @@
     "Username": "TODO",
     "Password": "TODO", // in user secrets
     "Channel": "sms",
-    "Sender": "damienenpoc"
+    "Sender": "pocdamien"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.ApplicationInsights" ],
